--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="PVM by UAK - Passion Made Profession. AI-powered poultry vaccine schedule management by Dr. Usman Ali">
   
   <!-- PWA Manifest -->
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="pvm-by-uak/manifest.json">
   
   <!-- iOS Meta Tags -->
   <meta name="apple-mobile-web-app-capable" content="yes">
